2007-07-25  Jürg Billeter  <j@bitron.ch>

	* gobject/valacodegenerator.vala, gobject/valacodegeneratorclass.vala,
	  gobject/valacodegeneratormethod.vala,
	  gobject/valacodegeneratorstruct.vala: don't expose private classes in
	  public header files

2007-07-25  Jürg Billeter  <j@bitron.ch>

	* gobject/valacodegeneratorassignment.vala: ensure that index expression
	  in element access doesn't get evaluated more than once

2007-07-25  Jürg Billeter  <j@bitron.ch>

	* ccode/valaccodefunction.vala: add void to function declarations
	  without parameters as required by C89

2007-07-24  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala, gobject/valacodegenerator.vala:
	  add support for iteration over Gee.Iterable collections

2007-07-24  Jürg Billeter  <j@bitron.ch>

	* vala/valamemorymanager.vala: skip memory manager for VAPI files
	* vala/valasemanticanalyzer.vala: remove unnecessary code in
	  visit_creation_method

2007-07-24  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodecompiler.vala, compiler/valacompiler.vala: add --cc
	  and -X options to be able to specify custom command and options for
	  the C compiler

2007-07-24  Jürg Billeter  <j@bitron.ch>

	* gobject/valacodegenerator.vala,
	  gobject/valacodegeneratormemberaccess.vala,
	  gobject/valacodegeneratormethod.vala: remove unnecessary runtime
	  checks in release mode, simplify creation method when not using
	  construction properties

2007-07-24  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/valainterface.vala: allow private static fields in
	  interfaces, fixes bug 437435

2007-07-23  Jürg Billeter  <j@bitron.ch>

	* vala/valaarray.vala, vala/valaarraylengthfield.vala,
	  vala/valaarrayresizemethod.vala, vala/valaattribute.vala,
	  vala/valacodenode.vala, vala/valaconstant.vala, vala/valafield.vala,
	  vala/valanamespacereference.vala, vala/valasignal.vala,
	  vala/valasourcefile.vala: remove unnecessary construction properties
	  to improve performance
